# condatainer

./: .gitignore  .gitmodules  .readthedocs.yml  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  MG_README.md  Makefile  README.md  README_MG.md  go.mod  go.sum  main.go
.github/: dependabot.yml
assets/: CNT_MANUAL.md  MANUAL_BUILD_SCRIPT.md  MANUAL_CNT.md  MANUAL_MG.md  MEMO.md  MG_MANUAL.md  TIPS.md  build-template-apps  build-template-ref  env.img.env.bak  environment.yml  install.modgen.sh  install.sh  squash_bench.csv
build-scripts/: apps-template  apps-template.lua  base_image.def  base_image_amd.def  base_image_nv.def  build-essential.def  code-server.def  igv.def  lxde.def  metadata.json  ref-template  ref-template.lua  rstudio-server.def
cmd/: avail.go  check.go  completion.go  config.go  config_test.go  create.go  create_test.go  e.go  exec.go  export.go  export_test.go  flagusage.go  helper.go  helper_test.go  info.go  instance.go  list.go  o.go  overlay.go  proxy.go  remove.go  root.go  run.go  scheduler.go  search.go  server.go  server_internal.go  shared.go  shared_test.go  update.go  update_test.go
docs/: MANUAL_BUILD_SCRIPT.md  MANUAL_CNT.md  MANUAL_MG.md  README_BUILD.md  conf.py  index.rst  install.sh  requirements.txt
helpers/: README.md  code-server-helper  code-server-helper-local  rstudio-server-helper  rstudio-server-helper-local  vscode-tunnel-helper  vscode-tunnel-helper-local
metadata/: build-scripts.json  helper-scripts.json
src/: config.rs  lib.rs  main.rs  utils.rs
web/: README.md  app.js  assets.go  fetch-icons.sh  files.js  (+7 more)
(+1024 files in other folders)
