[package]
name = "condatainer"
version = "0.1.0"
edition = "2021"
description = "A Rust implementation of the CondaTainer CLI."
authors = ["Condatainer Contributors"]
license = "Apache-2.0 OR MIT"

[lib]
name = "condatainer"
path = "src/lib.rs"

[[bin]]
name = "condatainer"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
config = "0.14"
dirs = "5.0"
shellexpand = "3.1"
colored = "2.1"
regex = "1.10"
ureq = "2.10"
flate2 = "1.0"
which = "6.0"
thiserror = "2.0.18"
libc = "0.2.180"
ctrlc = "3.4"
